--- a/UI/AnimeStore/src/index.css
+++ b/UI/AnimeStore/src/index.css
@@ -10,3 +10,12 @@
     url('https://images.pexels.com/photos/6984661/pexels-photo-6984661.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940')
       center;
 }
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
